--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "React App",
-    "name": "Create React App Sample",
+    "short_name": "DVT Storefront",
+    "name": "DVT Storefront",
     "icons": [
         {
             "src": "favicon.ico",
